--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "formik": "^2.4.6",
+    "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   }
 }
